add some comments

--- a/literature.bib
+++ b/literature.bib
@@ -77,7 +77,7 @@ pages = {98-- 129}
 }
 
 
-@incollection{birdseye,
+@incollection{birdseyeEMLatin,
 author = {Maciej Eder},
 editor = {Laura Estill and Diane K. Jakacki and Michael Ullyot},
 title = {A Bird's Eye View of Early Modern Latin: Distant Reading, Network Analysis, and Style Variation},
@@ -109,7 +109,7 @@ url={10.1093/oxfordhb/9780199573691.013.009}
 }
   
  
-@incollection{textvisual,
+@incollection{textvisualization,
 author = {Steffan Sinclair and Geoffrey Rockwell},
 editor = {Susan Schreibmann and Ray Siemens and John Unsworth},
 title = {Text Analysis and Visualization: Making Meaning Count},
