--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,6 @@
 \usepackage[ngerman,english]{babel}
 
 
-% colour themes to come. KnitR?
 
 %-------------------------
 
@@ -232,7 +231,7 @@ $\to$ aber geht natürlich super für moderne lebendige Sprachen, v.a. Englisch.
 \begin{quote}
     \textbf{But what is a word?} We tend to think of a word as a unit of meaning that often has an analog in the real world. \punkti A computer doesn't know what a word is and certainly has no sense of what words might refer to.
     \punkti 
-    Words are usually bounded by spaces and punctuation, and a computer can be told to split a long string (text) into shorter strings (words) by looking for the demarcation characters \punkti -- a process called tokenization.\footcite[283]{textvisual}
+    Words are usually bounded by spaces and punctuation, and a computer can be told to split a long string (text) into shorter strings (words) by looking for the demarcation characters \punkti -- a process called tokenization.\footcite[283]{textvisualization}
 \end{quote}
 \end{textbox}
 
@@ -291,7 +290,7 @@ Korrelationen, also statistische Abhängigkeiten, zwischen Eigenschaften der Dat
 
 \begin{quote}
      A \emph{corpus} is a body of texts (though a corpus can have only a single text). \punkti One size does not fit all.
-     \punkti A digital corpus is a bit like a bag of Lego where pieces can be built up in various configurations.\footcite[281--282]{textvisual}
+     \punkti A digital corpus is a bit like a bag of Lego where pieces can be built up in various configurations.\footcite[281--282]{textvisualization}
 \end{quote}
 
 
@@ -438,6 +437,7 @@ Konkordanz, Beziehungen zu anderen Wörtern, etc. Vom einen Begriff zum nächste
 
 
 \section{Grundbegriffe der Programmierung}
+% became the basis for this blogpost which was improved to be more readable: https://latex-ninja.com/2019/10/30/a-short-intro-to-the-key-concepts-of-computer-programming/ 
 
 \begin{textbox}{Communicating with computers I}
 \green{Algorithm} Recipe providing a formalized way to automate carrying out a task. Doesn't have to be noted down in a particular programming language yet, can be in `pseudo-code' (``Whenever you find a verb, do this. When you find a noun, do that.'' etc.)
@@ -746,6 +746,7 @@ In the Markdown cells, you can use either \href{https://commonmark.org/help/}{Ma
 
 
 \section{Natural Language Processing in Python}
+% taken from the linked eBook (modified a little)
 
 (Link $\to$ eBook) 
 
@@ -880,6 +881,7 @@ for xyzzy in sent1:
 \end{codebox}
 
 \begin{textbox}{Basics of CLTK (Classical Language Toolkit)}
+% taken from the CLTK docs to have a quick and a bit more visual summary of the most important things at hand
 \protect\url{http://cltk.org/} \sep
 \href{http://docs.cltk.org/en/latest/installation.html}{CLTK-Installation Page}
 
